--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "frontend": "file:",
     "lottie-react": "^2.4.0",
     "prop-types": "^15.8.1",
