--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/gamifiedweb
 PORT=5000
 JWT_SECRET="my_secret"
+EMAIL_USER=riteekagawand7@gmail.com
+EMAIL_PASS=hfjk dqbg vwjx dhzf
