--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "frontend": "file:",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.447.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
