--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "client": "file:",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-hot-toast": "^2.4.1",
