--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,13 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.19.3",
+    "axios": "^1.7.7",
     "client": "file:",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.447.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-hot-toast": "^2.4.1",
